--- a/pages/ocorrencia.html
+++ b/pages/ocorrencia.html
@@ -120,7 +120,7 @@
         <nav class="navbar navbar-dark" id="nav">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#"> <img src="../images/avatar_bombeiro.png" width="60px"></a>
-                <p class="navbar-title mt-3">TIPO DE OCORRÊNCIA (PRÉ-HOSPITALAR)</p>
+                <p class="navbar-title mt-3 fw-bold">TIPO DE OCORRÊNCIA (PRÉ-HOSPITALAR)</p>
                 <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
                     data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar"
                     aria-label="Toggle navigation">
